# tradingagents-ui

./: .gitignore  CLAUDE.md  README.md  README_zh.md  app.py  preferences.py  pyproject.toml  requirements.txt  run-lan.sh  run.sh  test_st.py  ui_config.py  ui_panels.py  ui_styles.py
.streamlit/: config.toml  secrets.toml.example
scripts/: install-macos-app.sh  launch-local-webapp.bat  launch-local-webapp.sh
tools/: tradingagents-quant-terminal-prompt.md
tools/baoyu-markdown-to-html/scripts/: main.ts  quant-terminal.ts
trade_ui/: cli.py
tradingagents_ui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
